<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar" />
    </com.google.android.material.appbar.MaterialToolbar>

    <RadioGroup
        android:id="@+id/inputOptions"
        android:layout_width="194dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/domesticOption"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/domestic_option" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/industryOption"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/industrial_option" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/electricUnitInput"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/input_unit_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputOptions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:inputType="text"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricUnitInput" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/calculatedBillOutput"
        android:layout_width="409dp"
        android:layout_height="198dp"
        android:text="Hello World!"
        android:textAlignment="viewStart"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBill"
        app:layout_constraintVertical_bias="0.931"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>